Fix spacing on output and input

--- a/src/datascience-ui/native-editor/nativeEditor.less
+++ b/src/datascience-ui/native-editor/nativeEditor.less
@@ -55,7 +55,7 @@
     border-style: solid;
     border-color: var(--override-widget-background, var(--vscode-notifications-background));
     border-width: 3px;
-    width: calc(100vw - 85px);
+    width: calc(100vw - 115px);
     overflow-x: scroll;
     grid-row: 1;
     grid-column: 3;
@@ -67,7 +67,7 @@
 }
 
 .markdown-cell-output {
-    width: calc(100vw - 95px);
+    width: calc(100vw - 115px);
     overflow-x: scroll;
 }
 
@@ -125,7 +125,7 @@
     background: var(--override-widget-background, var(--vscode-notifications-background));
     grid-column: 3;
     grid-row: 1;
-    min-width: calc(100% - 85px);
+    min-width: calc(100% - 115px);
 }
 
 .content-div {
